--- a/account/templates/account/footer/about.html
+++ b/account/templates/account/footer/about.html
@@ -2,15 +2,15 @@
 {% load static %}
 {% block content %}
 <div class="bg-[#032245] text-gray">
-    <div style=" max-width: 1240px; margin: 0 auto;">
-        <div class="flex justify-center item-center"> <img src="{% static 'images/ducsu_logo.png' %}"
+    <div style="max-width: 1240px; margin-left: 100px;">
+        <div class="flex justify-center item-center gap-10"> <img src="{% static 'images/ducsu_logo.png' %}"
                 style="height: 160px;" alt="logo"></div>
         <div class="flex gap-10">
             <div class="w-10">
                 <ul class="sticky top-0 text-lg text-gray">
                     <li class="font-bold hover:text-pink-400"><a href="#overview">Overview</a></li>
                     <li class="font-bold hover:text-pink-400"><a href="#objectives">Objectives</a></li>
-                    <li class="font-bold hover:text-pink-400"><a href="#useage">Useage</a></li>
+                    <li class="font-bold hover:text-pink-400"><a href="#usage">Usage</a></li>
                     <li class="font-bold hover:text-pink-400"><a href="#technologies">Technologies</a></li>
                     <li class="font-bold hover:text-pink-400"><a href="#contact">Contact</a></li>
                 </ul>
@@ -49,8 +49,8 @@
                         institutions and communities.
                     </ol>
                 </div>
-                <div class="text-md mb-4" id="useage">
-                    <span class="font-bold">Useages</span> <br>
+                <div class="text-md mb-4" id="usage">
+                    <span class="font-bold">Usage</span> <br>
                     <div class="px-5">
                         <h4 class="font-semibold mb-1">User Registration and Authentication - </h4>
 
