--- a/account/templates/account/footer/how_to_use.html
+++ b/account/templates/account/footer/how_to_use.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% block content %}
 <div class="bg-[#032245] text-gray">
-    <div style=" max-width: 1240px; margin: 0 auto;">
+    <div style="max-width: 1240px; margin-left: 95px;">
         <div class="flex justify-center item-center"> <img src="{% static 'images/ducsu_logo.png' %}"
                 style="height: 160px;" alt="logo"></div>
         <div class="flex gap-10">
-            <div class="w-1/5 mt-3">
+            <div class="w-30 mt-3">
                 <ul class="sticky top-0 text-lg text-gray">
                     <li class="font-bold hover:text-pink-400"><a href="#s1">Step 1 : Registration & Activation</a>
                     </li>
