--- a/account/templates/account/footer/about.html
+++ b/account/templates/account/footer/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="bg-[#032245] text-gray">
-    <div style=" max-width: 1240px; margin: 0 auto;">
+    <div style=" max-width: 1240px; margin-left: 100px;">
         <div class="flex justify-center item-center"> <img src="{% static 'images/ducsu_logo.png' %}"
                 style="height: 160px;" alt="logo"></div>
         <div class="flex gap-10">
