verify-email-correction

--- a/account/templates/account/varify_email.html
+++ b/account/templates/account/varify_email.html
@@ -5,5 +5,5 @@
 
   http://{{domain}}{% url 'activate' uidb64=uid token=token %}
 
-  If it's not you just ignor this email!
+  If it's not you just ignore this email!
 {% endautoescape %}
